Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7653

replay-single/test_110f test failed Lustre: DEBUG MARKER: replay-single test_110f: FAIL: 1 != 2 after recovery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Lustre 2.8.0
    • None
    • Configuration : 4 Node - ( 1 MDS/1 OSS/2 Clients)_dne_singlemds
      Release
      2.6.32_431.29.2.el6_lustremaster_9267_2_g959f8f7 Build Date: Sat 02 Jan 2016 05:21:40 PM UTC
      Server 2.7.64
      Client 2.7.64
    • 3
    • 9223372036854775807

      == replay-single test 110f: DNE: create striped dir, fail MDT1/MDT2 == 04:57:43 (1452229063)
      Filesystem          1K-blocks  Used Available Use% Mounted on
      fre1225@tcp:/lustre   1377952 68464   1236816   6% /mnt/lustre
      Filesystem          1K-blocks  Used Available Use% Mounted on
      fre1225@tcp:/lustre   1377952 68464   1236816   6% /mnt/lustre
      Failing mds1 on fre1225
      Stopping /mnt/mds1 (opts:) on fre1225
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      Failing mds2 on fre1225
      Stopping /mnt/mds2 (opts:) on fre1225
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      reboot facets: mds1
      Failover mds1 to fre1225
      04:57:56 (1452229076) waiting for fre1225 network 900 secs ...
      04:57:56 (1452229076) network interface is UP
      mount facets: mds1
      Starting mds1: -o rw,user_xattr  /dev/vdb /mnt/mds1
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      Started lustre-MDT0000
      reboot facets: mds2
      Failover mds2 to fre1225
      04:58:07 (1452229087) waiting for fre1225 network 900 secs ...
      04:58:07 (1452229087) network interface is UP
      mount facets: mds2
      Starting mds2: -o rw,user_xattr  /dev/vdc /mnt/mds2
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      pdsh@fre1227: fre1225: ssh exited with exit code 1
      Started lustre-MDT0001
      fre1228: mdc.lustre-MDT0000-mdc-*.mds_server_uuid in FULL state after 5 sec
      fre1227: mdc.lustre-MDT0000-mdc-*.mds_server_uuid in FULL state after 5 sec
      fre1228: mdc.lustre-MDT0001-mdc-*.mds_server_uuid in FULL state after 0 sec
      fre1227: mdc.lustre-MDT0001-mdc-*.mds_server_uuid in FULL state after 0 sec
      /mnt/lustre/d110f.replay-single/striped_dir has type dir OK
       replay-single test_110f: @@@@@@ FAIL: 1 != 2 after recovery 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:4767:error_noexit()
        = /usr/lib64/lustre/tests/test-framework.sh:4798:error()
        = /usr/lib64/lustre/tests/replay-single.sh:3600:check_striped_dir_110()
        = /usr/lib64/lustre/tests/replay-single.sh:3725:test_110f()
        = /usr/lib64/lustre/tests/test-framework.sh:5045:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:5082:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:4899:run_test()
        = /usr/lib64/lustre/tests/replay-single.sh:3731:main()
      Dumping lctl log to /tmp/test_logs/1452229057/replay-single.test_110f.*.1452229095.log
      fre1228: Warning: Permanently added 'fre1227,192.168.112.27' (RSA) to the list of known hosts.
      
      fre1225: Warning: Permanently added 'fre1227,192.168.112.27' (RSA) to the list of known hosts.
      
      fre1226: Warning: Permanently added 'fre1227,192.168.112.27' (RSA) to the list of known hosts.
      
      FAIL 110f (33s)
      

        1. 110f.lctl.tgz
          958 kB
        2. 110f__0.console.MDS.log
          149 kB
        3. 110f__0.messages.MDS.log
          234 kB
        4. 110f__0.stdout.log
          7 kB
        5. 110f__PTLDEBUG.lctl.tgz
          1.69 MB

            aboyko Alexander Boyko
            parinay parinay v kondekar (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: